gitops/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops
  namespace: flux-system
spec:
  ingressClassName: nginx
  rules:
    - host: gitops.sharing.io
      http:
        paths:
          - backend:
              service:
                name: ww-gitops-weave-gitops
                port:
                  number: 9001
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - gitops.sharing.io
